--- a/src/styles/_middle.scss
+++ b/src/styles/_middle.scss
@@ -12,41 +12,35 @@
             height: 450px;
             width: 350px;
             object-fit: cover;
+            object-position: center;
             display: block;
-            margin: 0 auto;
+            margin: 16px auto;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgb(0, 0, 0);
         }
 
         &__text{
-            margin-top: 32px;
+            margin: 0 auto;
             font-weight: bold;
             font-size: 1.3em;
             text-align: center;
             padding: 16px 8px;
             color: #fff;
             max-width: 600px;
+            overflow-y: hidden;
 
             p {
                 text-shadow: 8px 8px 16px rgb(0, 0, 0);
             }
         }
 
-        @media (max-width: 640px) {
-            height: 80vh;
-    
-            &__image {
-                height: 450px;
-                width: 350px;
-            }
-        }
+        @media (max-width: 1036px) {
+            height: 60vh;
+            margin-bottom: 8px;
 
-        @media (max-width: 780px) {
-            height: 70vh;
-    
             &__image {
                 height: 450px;
-                width: 350px;
+                width: 300px;
             }
         }
     }
